--- a/src/components/CandyButton.css
+++ b/src/components/CandyButton.css
@@ -30,6 +30,7 @@
   height: 50px;
   line-height: 52px;
   perspective: 230px;
+  margin: 0 auto;
 }
 
 .btn-candy-12 span {
@@ -37,7 +38,7 @@
   background: linear-gradient(0deg, rgba(62, 123, 39, 1) 0%, rgba(133, 169, 71, 1) 100%);
   display: block;
   position: absolute;
-  width: 180px;
+  width: 100%;
   height: 50px;
   box-shadow: inset 2px 2px 2px 0px rgba(255,255,255,.5),
     7px 7px 20px 0px rgba(0,0,0,.1),
@@ -50,6 +51,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  left: 0;
+  right: 0;
 }
 
 .btn-candy-12 span:nth-child(1) {
@@ -84,34 +87,44 @@
 
 /* Responsive styles */
 @media (max-width: 768px) {
-  .candy-btn, .btn-candy-12, .btn-candy-12 span {
-    width: 160px;
+  .candy-btn, .btn-candy-12 {
+    width: 100%;
     height: 45px;
     line-height: 47px;
     font-size: 1.1rem;
   }
-  
+
+  .btn-candy-12 span {
+    width: 100%;
+    height: 45px;
+  }
+
   .btn-candy-12 span:nth-child(1) {
     transform-origin: 50% 50% -22.5px;
   }
-  
+
   .btn-candy-12 span:nth-child(2) {
     transform-origin: 50% 50% -22.5px;
   }
 }
 
 @media (max-width: 480px) {
-  .candy-btn, .btn-candy-12, .btn-candy-12 span {
-    width: 140px;
+  .candy-btn, .btn-candy-12 {
+    width: 100%;
     height: 40px;
     line-height: 42px;
     font-size: 1rem;
   }
-  
+
+  .btn-candy-12 span {
+    width: 100%;
+    height: 40px;
+  }
+
   .btn-candy-12 span:nth-child(1) {
     transform-origin: 50% 50% -20px;
   }
-  
+
   .btn-candy-12 span:nth-child(2) {
     transform-origin: 50% 50% -20px;
   }
